# uci_online_retail

./: .env-example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.MD  CHANGELOG.md  EXPERIMENT_PLAN.md  README.md  example.env  pyproject.toml
app_config/dev/: evaluation_pipeline.yaml  preprocessing_pipeline.yaml  training_pipeline.yaml
components/preprocessing/: clean_data.py  feature_engineering.py  ingest_data.py  split_data.py
components/training/: train_model.py
data/: variable_description.md
data/pipeline_runs/: cleaned_data.parquet  raw_data.parquet
docker/: .dockerignore  Dockerfile
notebooks/: investigate_data.ipynb
pipelines/: local_runner.py  preprocessing_pipeline.yaml  training_pipeline.yaml
setup_scripts/: __init__.py  initialize_sqlite_database.py  investigate_data.ipynb
src/: __init__.py  __main__.py  log_config.py
src/components/evaluation/: backtest_model.py  evaluate_models.py
src/components/preprocessing/: clean_data.py  feature_engineering.py  ingest_data.py  split_data.py
src/components/training/: backtest_model.py  model_performance_investigation.ipynb  train_model.py
src/data_cleaning/: data_cleaning.py
src/data_processing/: data_cleaner.py  data_splitter.py  feature_engineer.py
src/modules/: utils.py
src/modules/data_processing/: data_cleaner.py  data_loader.py  feature_engineer.py
src/modules/model_handling/: model_catalogue.py  model_handler.py
src/pipelines/: azure_deployment.py  evaluation_pipeline_local_runner.py  local_runner.py  preprocessing_pipeline_local_runner.py  training_pipeline_local_runner.py
src/setup_scripts/: initialize_sqlite_database.py  investigate_data.ipynb
